Added support for filtering reporting resources for metrics