@@ -32,6 +32,8 @@ import io.opentelemetry.proto.metrics.v1.*;
 import io.opentelemetry.proto.resource.v1.Resource;
 import jakarta.el.ELProcessor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.tuple.Pair;
 
 import java.util.*;
 import java.util.function.Function;
@@ -70,39 +72,44 @@ public class MetricGeneratorThread implements Runnable {
     @Override
     public void run() {
         log.debug(requestID + ": Metric generator thread invoked for resource type: " + groupKey + " with metrics: " +
-                metrics.values().stream().map(MetricDefinition::getName).collect(Collectors.toList()));
+                metrics.values().stream().map(MetricDefinition::getName).toList());
         int payloadCount = metrics.values().stream().findFirst().get().getPayloadCount();
         if (metricGeneratorState.isGenerateData() && currentCount < payloadCount) {
             List<ResourceMetrics> resourceMetricsList = new ArrayList<>();
             ResourceMetrics resourceMetric;
             List<Metric.Builder> partialOTelMetrics = metrics.values().stream()
-                    .map(this::getMetric).collect(Collectors.toList());
-            List<Resource> resources = ResourceModelProvider.getResourceModel(requestID)
-                    .get(groupKey.split("::")[0]).stream()
-                    .filter(GeneratorResource::isActive)
-                    .map(GeneratorResource::getOTelResource)
-                    .collect(Collectors.toList());
-            log.debug(requestID + ": Preparing " + resources.size() + " resource metric packets for " + groupKey);
-            for (Resource eachResource: resources) {
+                    .map(this::getMetric).toList();
+            Pair<List<Resource>, List<Set<String>>> reportingResourcesAndMetrics = getReportingResources();
+            List<Resource> reportingResources = reportingResourcesAndMetrics.getLeft();
+            log.debug(requestID + ": Preparing " + reportingResources.size() + " resource metric packets for " + groupKey);
+            for (int resourceIndex=0; resourceIndex<reportingResources.size(); resourceIndex++) {
+                Resource reportingResource = reportingResources.get(resourceIndex);
+                Set<String> applicableMetrics = reportingResourcesAndMetrics.getRight().get(resourceIndex);
+                List<Metric.Builder> filteredMetrics = partialOTelMetrics.stream()
+                        .filter(partialMetric -> applicableMetrics.contains(partialMetric.getName()))
+                        .toList();
                 List<Metric> otelMetrics = new ArrayList<>();
-                for (Metric.Builder eachPartialMetric: partialOTelMetrics) {
-                    List<KeyValue> resourceAttrs = GeneratorUtils.getResourceAttributes(metrics.get(eachPartialMetric.getName())
-                            .getCopyResourceAttributes(), eachResource);
+                for (Metric.Builder eachPartialMetric: filteredMetrics) {
+                    List<KeyValue> resourceAttrs = GeneratorUtils.getResourceAttributes(
+                            metrics.get(eachPartialMetric.getName()).getCopyResourceAttributes(), reportingResource
+                    );
                     otelMetrics.add(getMetricWithResourceAttributes(eachPartialMetric, resourceAttrs));
                 }
                 resourceMetric = ResourceMetrics.newBuilder()
-                        .setResource(eachResource)
+                        .setResource(reportingResource)
                         .addScopeMetrics(ScopeMetrics.newBuilder()
                                 .setScope(InstrumentationScope.newBuilder()
-                                        .setName("@opentelemetry/test-telemetry-generator")
-                                        .setVersion("22.10.0")
+                                        .setName(Constants.SELF_NAME)
+                                        .setVersion(Constants.SELF_VERSION)
                                         .build())
                                 .addAllMetrics(otelMetrics)
                                 .build())
                         .build();
                 resourceMetricsList.add(resourceMetric);
             }
-            ExportMetricsServiceRequest resourceMetrics = ExportMetricsServiceRequest.newBuilder().addAllResourceMetrics(resourceMetricsList).build();
+            ExportMetricsServiceRequest resourceMetrics = ExportMetricsServiceRequest.newBuilder()
+                    .addAllResourceMetrics(resourceMetricsList)
+                    .build();
             log.info(requestID + ": Sending payload for: " + groupKey);
             log.debug(requestID + ": Complete payload for " + groupKey + ": " + resourceMetrics);
             boolean responseStatus = payloadHandler.postPayload(resourceMetrics);
@@ -115,37 +122,94 @@ public class MetricGeneratorThread implements Runnable {
     }
 
     private Metric.Builder getMetric(MetricDefinition metricDefinition) {
-        switch (metricDefinition.getOtelType()) {
-            case Constants.GAUGE:
-                return gaugeGenerator.getOTelMetric(metricDefinition);
-            case Constants.SUM:
-                return sumGenerator.getOTelMetric(metricDefinition);
-            default:
-                return summaryGenerator.getOTelMetric(metricDefinition);
+        return switch (metricDefinition.getOtelType()) {
+            case Constants.GAUGE -> gaugeGenerator.getOTelMetric(metricDefinition);
+            case Constants.SUM -> sumGenerator.getOTelMetric(metricDefinition);
+            default -> summaryGenerator.getOTelMetric(metricDefinition);
+        };
+    }
+
+    private Pair<List<Resource>, List<Set<String>>> getReportingResources() {
+        String resourceType = groupKey.split("::")[0];
+        Set<String> metricsWithAllResources = metrics.values().stream()
+                .filter(metric -> CollectionUtils.emptyIfNull(metric.getReportingResources()).contains(resourceType))
+                .map(MetricDefinition::getName)
+                .collect(Collectors.toSet());
+        List<GeneratorResource> allReportingResources = ResourceModelProvider.getResourceModel(requestID)
+                .get(resourceType).stream()
+                .filter(GeneratorResource::isActive)
+                .toList();
+        List<Set<String>> metricsForEachResource = new ArrayList<>();
+        for (int resourceIndex=0; resourceIndex<allReportingResources.size(); resourceIndex++) {
+            metricsForEachResource.add(new HashSet<>(metricsWithAllResources));
         }
+        Set<String> metricsWithFilteredResources = new HashSet<>(metrics.keySet());
+        metricsWithFilteredResources.removeAll(metricsWithAllResources);
+        for (String metricWithFilteredResources: metricsWithFilteredResources) {
+            for (int resourceIndex=0; resourceIndex<allReportingResources.size(); resourceIndex++) {
+                if (allReportingResources.get(resourceIndex).getEvaluatedAttributes().entrySet().containsAll(
+                        metrics.get(metricWithFilteredResources).getParsedFilteredReportingResources()
+                                .get(resourceType).entrySet()
+                )) {
+                    metricsForEachResource.get(resourceIndex).add(metricWithFilteredResources);
+                }
+            }
+        }
+        return Pair.of(allReportingResources.stream().map(GeneratorResource::getOTelResource).toList(),
+                metricsForEachResource);
     }
 
     private Metric getMetricWithResourceAttributes(Metric.Builder partialMetric, List<KeyValue> resourceAttributes) {
         Metric.DataCase metricType = partialMetric.getDataCase();
         if (metricType.equals(Metric.DataCase.GAUGE)) {
             List<NumberDataPoint> dataPoints = partialMetric.getGauge().getDataPointsList();
-            List<NumberDataPoint> dataPointsWAttrs = dataPoints.stream().map(NumberDataPoint::toBuilder)
-                    .map(bdp -> bdp.addAllAttributes(resourceAttributes).build()).collect(Collectors.toList());
-            Gauge newGauge = partialMetric.getGauge().toBuilder().clearDataPoints().addAllDataPoints(dataPointsWAttrs).build();
-            return Metric.newBuilder().setName(partialMetric.getName()).setUnit(partialMetric.getUnit()).setGauge(newGauge).build();
+            List<NumberDataPoint> dataPointsWAttrs = dataPoints.stream()
+                    .map(NumberDataPoint::toBuilder)
+                    .map(bdp -> bdp.addAllAttributes(resourceAttributes).build())
+                    .toList();
+            Gauge newGauge = partialMetric.getGauge().toBuilder()
+                    .clearDataPoints()
+                    .addAllDataPoints(dataPointsWAttrs)
+                    .build();
+            return Metric.newBuilder()
+                    .setName(partialMetric.getName())
+                    .setUnit(partialMetric.getUnit())
+                    .setGauge(newGauge)
+                    .build();
         } else if (metricType.equals(Metric.DataCase.SUM)) {
             List<NumberDataPoint> dataPoints = partialMetric.getSum().getDataPointsList();
-            List<NumberDataPoint> dataPointsWAttrs = dataPoints.stream().map(NumberDataPoint::toBuilder)
-                    .map(bdp -> bdp.addAllAttributes(resourceAttributes).build()).collect(Collectors.toList());
-            partialMetric.getSum().toBuilder().clearDataPoints().addAllDataPoints(dataPointsWAttrs).build();
-            Sum newSum = partialMetric.getSum().toBuilder().clearDataPoints().addAllDataPoints(dataPointsWAttrs).build();
-            return Metric.newBuilder().setName(partialMetric.getName()).setUnit(partialMetric.getUnit()).setSum(newSum).build();
+            List<NumberDataPoint> dataPointsWAttrs = dataPoints.stream()
+                    .map(NumberDataPoint::toBuilder)
+                    .map(bdp -> bdp.addAllAttributes(resourceAttributes).build())
+                    .toList();
+            partialMetric.getSum().toBuilder()
+                    .clearDataPoints()
+                    .addAllDataPoints(dataPointsWAttrs)
+                    .build();
+            Sum newSum = partialMetric.getSum().toBuilder()
+                    .clearDataPoints()
+                    .addAllDataPoints(dataPointsWAttrs)
+                    .build();
+            return Metric.newBuilder()
+                    .setName(partialMetric.getName())
+                    .setUnit(partialMetric.getUnit())
+                    .setSum(newSum)
+                    .build();
         } else {
             List<SummaryDataPoint> dataPoints = partialMetric.getSummary().getDataPointsList();
-            List<SummaryDataPoint> dataPointsWAttrs = dataPoints.stream().map(SummaryDataPoint::toBuilder)
-                    .map(bdp -> bdp.addAllAttributes(resourceAttributes).build()).collect(Collectors.toList());
-            Summary newSummary = partialMetric.getSummary().toBuilder().clearDataPoints().addAllDataPoints(dataPointsWAttrs).build();
-            return Metric.newBuilder().setName(partialMetric.getName()).setUnit(partialMetric.getUnit()).setSummary(newSummary).build();
+            List<SummaryDataPoint> dataPointsWAttrs = dataPoints.stream()
+                    .map(SummaryDataPoint::toBuilder)
+                    .map(bdp -> bdp.addAllAttributes(resourceAttributes).build())
+                    .toList();
+            Summary newSummary = partialMetric.getSummary().toBuilder()
+                    .clearDataPoints()
+                    .addAllDataPoints(dataPointsWAttrs)
+                    .build();
+            return Metric.newBuilder()
+                    .setName(partialMetric.getName())
+                    .setUnit(partialMetric.getUnit())
+                    .setSummary(newSummary)
+                    .build();
         }
     }
 
